# SkillsScope

.devcontainer/: devcontainer.json
SkillScope1/: app.py  config.py  login.py  pyproject.toml  replit.md  requirements.txt
SkillScope1/data/: mock_job_data.py  skill_taxonomy.py
SkillScope1/pages/: 1_Industry_Trends.py  2_Resume_Analyzer.py  3_Career_Recommendations.py  4_Live_Job_Search.py  5_Skill_Trends_Forecasting.py  6_Salary_Predictor.py
SkillScope1/utils/: api_integrator.py  auth_manager.py  data_loader.py  nlp_processor.py  simple_auth.py  skill_extractor.py
